Sun Dec 28 21:57:39 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Fixed server statistics decrementing error to not go to
	  negative.  Affected file silcd/packet_receive.c.

Sat Dec 20 14:42:36 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Use silc_server_query_add_error to add error in public key
	  search error.  Added support in send_reply to send errors
	  without specific argument.  Affected file silcd/server_query.c.

	* Fixed the WHOIS, IDENTIFY and WHOWAS error handling in SILC 
	  Client for NO_SUCH_NICK.  It was against the protocol specs.
	  Affected file irssi/src/silc/core/client_ops.c.

	* Added backwards support for the wrong NO_SUCH_NICK error sending
	  in server.  To be removed in SILC Server 1.0.  Both old clients
	  and clients with fixed error handling now works.  Affected file
	  silcd/server_query.c.

Sat Dec 20 00:44:47 CET 2003  Patrik Weiskircher <pat@icore.at>

	* fixed a bug in the whois using attributes function where no 
	  error was sent if no nickname and client id but the attributes were
	  given to whois. Affected file silcd/server_query.c

Tue Dec 16 21:34:59 CET 2003  Patrik Weiskircher <pat@icore.at>

	* remove public key from public key hashtable on detach. Affected
	  file silcd/packet_receive.c

	* free public key hashtable before removing clients on server
	  shutdown. Affected file silcd/server.c

	* remove public key prior deleting client-data on killing a client.
	  Affected file silcd/server_util.c

Sat Dec 06 21:35:14 CET 2003  Patrik Weiskircher <pat@icore.at>

	* Getting the MOTD from other servers works now. Affected
	  files are silcd/command.c and silcd/command_reply.c

Thu Dec 04 11:33:46 CET 2003  Jochen Eisinger <jochen@penguin-breeder.org>

	* Initialize the variable idletag, since it is tested in 
	  silc_core_deinit for its default value.  Affected file
	  irssi/src/silc/core/silc-core.c

Sun Nov 30 19:47:02 CET 2003  Patrik Weiskircher <pat@icore.at>
