@@ -157,6 +157,7 @@ enum {
   SILCTXT_WATCH_NICK_CHANGE,
   SILCTXT_MESSAGE_DATA,
   SILCTXT_STATS,
+  SILCTXT_REATTACH,
 
   SILCTXT_FILL_5,
 
